[gd_scene load_steps=44 format=2]

[ext_resource path="res://Texturen/Stift.png" type="Texture" id=1]
[ext_resource path="res://Szenen/Start.gd" type="Script" id=2]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Texturen/Symbole/ZahnradPressed.png" type="Texture" id=4]
[ext_resource path="res://Texturen/Gradient.png" type="Texture" id=5]
[ext_resource path="res://Texturen/Symbole/Zahnrad.png" type="Texture" id=6]
[ext_resource path="res://Texturen/LokalBild.png" type="Texture" id=7]
[ext_resource path="res://Skripte/SwipeDetector.gd" type="Script" id=8]
[ext_resource path="res://Texturen/Symbole/Wahl.png" type="Texture" id=9]
[ext_resource path="res://Fonts/DejaVuSans/DejaVuSans.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Audio/UI/Tt.wav" type="AudioStream" id=11]
[ext_resource path="res://Texturen/hintergrundbild.png" type="Texture" id=12]
[ext_resource path="res://Texturen/OnlineBild.png" type="Texture" id=13]
[ext_resource path="res://Texturen/ComputerBild.png" type="Texture" id=14]
[ext_resource path="res://Szenen/Einstellungen.tscn" type="PackedScene" id=15]
[ext_resource path="res://Szenen/TransitionBlackness.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/CleanDark.tres" type="Theme" id=17]
[ext_resource path="res://Audio/UI/Pt.wav" type="AudioStream" id=18]

[sub_resource type="DynamicFont" id=14]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=15]
size = 113
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="DynamicFont" id=5]
size = 71
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.796078, 0.796078, 0.796078, 0.788235 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.862745, 0.862745, 0.862745, 0.788235 )
corner_radius_top_left = 25
corner_radius_top_right = 25

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.862745, 0.862745, 0.862745, 0.788235 )
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, -190 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "hin"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -190 ), Vector2( -8, 136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.796078, 0.796078, 0.796078, 0.894118 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color( 0, 0, 0, 0.129412 )
shadow_size = 48

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=33]
resource_name = "hi"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwipeDetector" type="Node" parent="."]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hintergrundsprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.305882 )
position = Vector2( -968, -64 )
texture = ExtResource( 12 )
centered = false

[node name="GradientControl" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -540.0
margin_right = -500.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gradient" type="Sprite" parent="GradientControl"]
modulate = Color( 0, 0, 0, 0.247059 )
position = Vector2( 1080, 336 )
rotation = 3.14159
scale = Vector2( 1, 0.108263 )
texture = ExtResource( 5 )
centered = false

[node name="VersionsLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -56.0
margin_right = -16.0
custom_colors/font_color = Color( 0.572549, 0.572549, 0.572549, 1 )
custom_fonts/font = SubResource( 14 )
text = "v0.5.5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 104.0
margin_bottom = 104.0
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1708.0
margin_top = -784.0
margin_right = -628.0
margin_bottom = -784.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.278431, 0.596078, 0.74902, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -284.0
margin_right = 284.0
margin_bottom = 284.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="TextureButton" parent="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 884.0
margin_top = -284.0
margin_right = 1452.0
margin_bottom = 284.0
texture_normal = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="3" type="TextureButton" parent="HBoxContainer"]
modulate = Color( 0.32549, 0.74902, 0.278431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2068.0
margin_top = -284.0
margin_right = 2636.0
margin_bottom = 284.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HBoxContainer"]

[node name="ModeBeschr" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -710.0
margin_bottom = -710.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="ModeBeschr"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.0
margin_top = 352.0
margin_right = 433.0
margin_bottom = 434.0
text = "Lokaler Multiplayer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="ModeBeschr"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.0
margin_top = 352.0
margin_right = 433.0
margin_bottom = 434.0
text = "Online Spiel"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="ModeBeschr"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.0
margin_top = 352.0
margin_right = 433.0
margin_bottom = 434.0
text = "vs. Computer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NachLinks" type="TextureButton" parent="."]
modulate = Color( 0.796078, 0.796078, 0.796078, 0.788235 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -348.0
margin_top = -661.0
margin_right = -236.0
margin_bottom = -355.0
rect_rotation = 180.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NachRechts" type="TextureButton" parent="."]
modulate = Color( 0.796078, 0.796078, 0.796078, 0.788235 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 356.0
margin_top = -872.0
margin_right = 468.0
margin_bottom = -566.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -412.0
margin_top = 352.0
margin_right = 420.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 15 )
text = "Schiffe
Versenken"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingWegButton" type="Button" parent="."]
visible = false
modulate = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Einstellungen" parent="." instance=ExtResource( 15 )]
visible = false

[node name="NamenWeg" type="Button" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -412.0
margin_right = 420.0
margin_bottom = 128.0
custom_colors/font_color_disabled = Color( 0.705882, 0.705882, 0.705882, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.705882, 0.705882, 0.705882, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 6 )
text = "Spieler_1"
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameHintergrund" type="Button" parent="NameButton"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_top = -190.0
margin_right = 840.0
margin_bottom = -6.0
custom_styles/disabled = SubResource( 25 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s1h" type="Button" parent="NameButton/NameHintergrund"]
margin_left = 8.0
margin_top = 8.0
margin_right = 840.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spieler1" type="LineEdit" parent="NameButton/NameHintergrund"]
margin_left = 8.0
margin_top = 8.0
margin_right = 752.0
margin_bottom = 88.0
custom_colors/cursor_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_styles/focus = SubResource( 28 )
custom_styles/normal = SubResource( 26 )
max_length = 20
context_menu_enabled = false
placeholder_text = "Spieler_1"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="NameButton/NameHintergrund/Spieler1"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
margin_left = 760.0
margin_top = 8.0
margin_right = 816.0
margin_bottom = 72.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="s2h" type="Button" parent="NameButton/NameHintergrund"]
margin_left = 8.0
margin_top = 96.0
margin_right = 840.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spieler2" type="LineEdit" parent="NameButton/NameHintergrund"]
margin_left = 8.0
margin_top = 96.0
margin_right = 752.0
margin_bottom = 176.0
custom_colors/cursor_color = Color( 0.156863, 0.156863, 0.156863, 1 )
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 27 )
max_length = 20
context_menu_enabled = false
placeholder_text = "Spieler_2"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="NameButton/NameHintergrund/Spieler2"]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
margin_left = 760.0
margin_top = 8.0
margin_right = 816.0
margin_bottom = 72.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NameButton/NameHintergrund"]
anims/RESET = SubResource( 29 )
anims/hin = SubResource( 30 )

[node name="VerbindeRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerbindeRectTimer" type="Timer" parent="VerbindeRect"]
wait_time = 0.3
one_shot = true

[node name="Control" type="Control" parent="VerbindeRect"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintergrundButton" type="Button" parent="VerbindeRect/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 236.0
margin_top = 1076.0
margin_right = 804.0
margin_bottom = 1288.0
custom_styles/disabled = SubResource( 31 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VerbindeRect/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 476.0
margin_top = 1180.0
margin_right = 564.0
margin_bottom = 1276.0
theme = ExtResource( 17 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VerbindeRect/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = 1080.0
margin_right = 964.0
margin_bottom = 1162.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.156863, 0.156863, 0.156863, 1 )
text = "verbinde..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="VerbindeRect/Control"]
anims/RESET = SubResource( 32 )
anims/hi = SubResource( 33 )

[node name="EingebeCover" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = -448.0
color = Color( 0.909804, 0.133333, 0.823529, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionBlackness" parent="." instance=ExtResource( 16 )]

[node name="TtClicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
pitch_scale = 0.88
bus = "UI"

[node name="PtClicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = 5.0
bus = "UI"

[connection signal="swipe" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe"]
[connection signal="swipe" from="SwipeDetector" to="Einstellungen" method="_on_SwipeDetector_swipe"]
[connection signal="swipe_done" from="SwipeDetector" to="." method="_on_SwipeDetector_swipe_done"]
[connection signal="swipe_done" from="SwipeDetector" to="Einstellungen" method="_on_SwipeDetector_swipe_done"]
[connection signal="button_down" from="SettingButton" to="." method="start_button_sound"]
[connection signal="pressed" from="SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="HBoxContainer/1" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="HBoxContainer/2" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="HBoxContainer/3" to="." method="_on_VsComputer_pressed"]
[connection signal="button_down" from="NachLinks" to="." method="start_button_sound"]
[connection signal="pressed" from="NachLinks" to="." method="_on_NachLinks_pressed"]
[connection signal="button_down" from="NachRechts" to="." method="start_button_sound"]
[connection signal="pressed" from="NachRechts" to="." method="_on_NachRechts_pressed"]
[connection signal="pressed" from="SettingWegButton" to="Einstellungen" method="_on_SettingWegButton_pressed"]
[connection signal="button_down" from="NamenWeg" to="." method="_on_NameButton_pressed"]
[connection signal="button_down" from="NameButton" to="." method="start_button_sound"]
[connection signal="pressed" from="NameButton" to="." method="_on_NameButton_pressed"]
[connection signal="text_changed" from="NameButton/NameHintergrund/Spieler1" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="NameButton/NameHintergrund/Spieler1/Sprite" to="." method="_on_Sprite_pressed"]
[connection signal="text_changed" from="NameButton/NameHintergrund/Spieler2" to="." method="_on_Spieler2_text_changed"]
[connection signal="pressed" from="NameButton/NameHintergrund/Spieler2/Sprite" to="." method="_on_Sprite2_pressed"]
[connection signal="timeout" from="VerbindeRect/VerbindeRectTimer" to="." method="_on_VerbindeRectTimer_timeout"]
[connection signal="button_down" from="VerbindeRect/Control/Button" to="." method="alt_button_sound"]
[connection signal="pressed" from="VerbindeRect/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="end_done" from="TransitionBlackness" to="." method="_on_TransitionBlackness_end_done"]
